tests/neg-macros/i7013c.scala
import quoted.*

def foo()(using Quotes) = {
  type C
  Type[C] // error
}
